--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit_lottie==0.0.2
-streamlit==1.3.0
-requests==2.24.0
-Pillow==8.4.0
+streamlit==0.61.0
+pandas==0.25.3
+numpy==1.18.1
+scikit-learn==0.22.1
